--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=hereful
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:+d7Gw31HUAUTR5q7g44H3nVE45LBcV1NmyYiuTGRMvA=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
